gcc/testsuite/g++.dg/cpp0x/variadic41.C
// { dg-options "-std=gnu++0x" }
template<typename... Args>
void f(const Args&... args, int oops); // { dg-error "end" }
